--- a/contafacio_office/src/app/ti/certificados/certificados.page.html
+++ b/contafacio_office/src/app/ti/certificados/certificados.page.html
@@ -10,18 +10,18 @@
 
 <ion-content [fullscreen]="true">
   <ion-list class="animated bounceInUp">
-    <ion-item-sliding *ngFor="let certificado of certificados">
+    <ion-item-sliding *ngFor="let c of cert">
       <ion-item>
         <ion-label>
-          <h2>{{certificado.name}}</h2>
-          <h3>{{certificado.vencimento}}</h3>
-          <p>{{certificado.situacao}}</p>
+          <h2>{{c.certificados}}</h2>
+          <h3>{{c.vencimento}}</h3>
+          <p>{{c.situacao}}</p>
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
         <ion-item-option color="success">Enviar</ion-item-option>
         <ion-item-option>Editar</ion-item-option>
-        <ion-item-option color="danger" (click)="delete(certificado)">Excluir</ion-item-option>
+        <ion-item-option color="danger" (click)="remove(c.id)">Excluir</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
