--- a/contafacio_office/src/app/ti/certificados/certificados.page.html
+++ b/contafacio_office/src/app/ti/certificados/certificados.page.html
@@ -4,6 +4,7 @@
       <ion-back-button></ion-back-button>
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
+    <ion-button slot="end" (click)="newCert()">NOVO</ion-button>
     <ion-title>certificados</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -19,16 +20,11 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-item-option color="success">Enviar</ion-item-option>
+        <ion-item-option color="success" (click)="enviarEmail(c.id, c.email)">Enviar</ion-item-option>
         <ion-item-option>Editar</ion-item-option>
         <ion-item-option color="danger" (click)="remove(c.id)">Excluir</ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="showNew()">
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-
-  </ion-fab>
+  
 </ion-content>
