--- a/contafacio_office/src/app/ti/certificados/certificados.page.html
+++ b/contafacio_office/src/app/ti/certificados/certificados.page.html
@@ -11,13 +11,12 @@
 
 <ion-content [fullscreen]="true">
   <ion-list class="animated bounceInUp">
-    <ion-item-sliding *ngFor="let c of cert">
+    <ion-item-sliding *ngFor="let c of certi">
       <ion-item>
         <ion-label>
           <h2>{{c.certificados}}</h2>
-          <p>{{c.vencimento}}</p>
           <p>{{c.email}}</p>
-          <ion-badge color={{cor}}>{{c.situacao}}</ion-badge>
+          <ion-badge color={{c.cor}}>{{c.situacao}}</ion-badge>
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
